--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,19 @@
   ],
   "routes": [
     {
+      "src": "/assets/(.*)",     // Vite's assets
+      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*\\.js)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.css)",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
